monticore-generator/src/test/resources/cocos/invalid/A4007/A4007.mc4
package cocos.invalid.A4007;

grammar A4007 extends mc.grammars.types.TestTypes {

  interface ReturnType;

}